add staff filter and error page

--- a/NetBeansProjects/Workshop1/web/404.html
+++ b/NetBeansProjects/Workshop1/web/404.html
@@ -6,12 +6,11 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>Insert Error</title>
+        <title>404</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <h2>Error add new mobile</h2>
-        <a href="staff.jsp">Go back</a>
+        <h1>Not found</h1>
     </body>
 </html>
